[package]
name = "zwift_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-recursion = "1.0.4"
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
html_parser = "0.6.3"
log = "0.4.17"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
